# mrwelch

./: .gitignore  Pipfile  README.md  _query_info.xml  badjoke.txt  critrole.txt  keep_alive.py  magic8.py  main.py  mrwelch.txt  pyproject.toml  replit.nix  requirements.txt  shane.txt  story.py  user_inventory.py
cogs/: define.py  dice.py  helphelp.py  inventory.py  music.py  story.py  welcher.py
