[tool.poetry]
name = "PyDisMrWelch"
version = "0.5.0"
description = ""
authors = ["Anonymouse Yourname <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.3.4"
flask = "^1.1.2"
python-dotenv = "^0.17.1"
simpleeval = "^0.9.10"
inflect = "^5.3.0"
wordbook = "^1.0.0"
validators = "^0.18.2"
youtube_dl = "^2021.6.6"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
