[tool.poetry]
name = "PyDisMrWelch"
version = "0.6.0"
description = "Silly sarcastic stooge for Discord discussions."
authors = ["Anonymouse Yourname <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
"discord.py" = "^1.3.4"
#discord = "2.3.2"
simpleeval = "0.9.13"
inflect = "^7.0.0"
python-dotenv = "^1.0.0"
wordbook = "^1.0.0"
flask = "^2.3.3"
pynacl = "1.5.0"
yt-dlp = "2023.7.6"
ffmpeg = "1.4"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
